created topbar, search bar, navbar

--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="mainContainer">
+      <div class="topBar">
+        <div class="rightTopbar">
+          <div class="map">
+            <img src="assets/icons/Map Pin.png" alt="" />
+          </div>
+          <div class="address">
+            <p>Store Location: Lincoln- 344, Illinois, Chicago, USA</p>
+          </div>
+        </div>
+        <div class="leftTopbar">
+          <div class="lang">
+            <select name="" id="">
+              <option value="">Eng</option>
+              <option value="">Hindi</option>
+              <option value="">French</option>
+            </select>
+          </div>
+          <div class="curr">
+            <select name="" id="">
+              <option value="">USD</option>
+              <option value="">INR</option>
+              <option value="">EUR</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <hr />
+      <div class="searchbar">
+        <div class="logo">
+          <img src="assets/logo/Logo.png" alt="" />
+        </div>
+
+        <div class="search">
+          <input type="" placeholder="Search" />
+          <button>Search</button>
+        </div>
+
+        <div class="contactUs">
+          <div class="phoneCall">
+            <img src="assets/icons/PhoneCall 1.png" alt="" />
+          </div>
+          <div class="PhoneCallNo">
+            <p>Customer Services</p>
+            <h4>(219) 555-0114</h4>
+          </div>
+        </div>
+      </div>
+
+      <div class="navigation">
+        <div class="navbar">
+          <a href="#">Home</a>
+          <a href="#">Shop</a>
+          <a href="#">Pages</a>
+          <a href="#">Blog</a>
+          <a href="#">About Us</a>
+          <a href="#">Contact Us</a>
+        </div>
+
+        <div class="icons">
+          <img src="assets/icons/Heart.png" alt="" />
+          <img src="assets/icons/Bag.png" alt="" />
+          <img src="assets/icons/user_3 1.png" alt="" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
