--- a/index.html
+++ b/index.html
@@ -8,70 +8,225 @@
   </head>
   <body>
     <div class="mainContainer">
-      <div class="topBar">
-        <div class="rightTopbar">
-          <div class="map">
-            <img src="assets/icons/Map Pin.png" alt="" />
+      <div class="topSection">
+        <div class="topBar">
+          <div class="rightTopbar">
+            <div class="map">
+              <img src="assets/icons/Map Pin.png" alt="" />
+            </div>
+            <div class="address">
+              <p>Store Location: Lincoln- 344, Illinois, Chicago, USA</p>
+            </div>
           </div>
-          <div class="address">
-            <p>Store Location: Lincoln- 344, Illinois, Chicago, USA</p>
+          <div class="leftTopbar">
+            <div class="lang">
+              <select name="" id="">
+                <option value="">Eng</option>
+                <option value="">Hindi</option>
+                <option value="">French</option>
+              </select>
+            </div>
+            <div class="curr">
+              <select name="" id="">
+                <option value="">USD</option>
+                <option value="">INR</option>
+                <option value="">EUR</option>
+              </select>
+            </div>
           </div>
         </div>
-        <div class="leftTopbar">
-          <div class="lang">
-            <select name="" id="">
-              <option value="">Eng</option>
-              <option value="">Hindi</option>
-              <option value="">French</option>
-            </select>
+        <hr />
+        <div class="searchbar">
+          <div class="logo">
+            <img src="assets/logo/Logo.png" alt="" />
           </div>
-          <div class="curr">
-            <select name="" id="">
-              <option value="">USD</option>
-              <option value="">INR</option>
-              <option value="">EUR</option>
-            </select>
+
+          <div class="search">
+            <input type="" placeholder="Search" />
+            <button>Search</button>
+          </div>
+
+          <div class="contactUs">
+            <div class="phoneCall">
+              <img src="assets/icons/PhoneCall 1.png" alt="" />
+            </div>
+            <div class="PhoneCallNo">
+              <p>Customer Services</p>
+              <h4>(219) 555-0114</h4>
+            </div>
+          </div>
+        </div>
+
+        <div class="navigation">
+          <img src="assets/icons/menu 1.png" alt="" class="hamburger" />
+          <div class="navbar">
+            <a href="#">Home</a>
+            <a href="#">Shop</a>
+            <a href="#">Pages</a>
+            <a href="#">Blog</a>
+            <a href="#">About Us</a>
+            <a href="#">Contact Us</a>
+          </div>
+
+          <div class="icons">
+            <img src="assets/icons/Heart.png" alt="" />
+            <img src="assets/icons/Bag.png" alt="" />
+            <img src="assets/icons/user_3 1.png" alt="" />
           </div>
         </div>
       </div>
-      <hr />
-      <div class="searchbar">
-        <div class="logo">
-          <img src="assets/logo/Logo.png" alt="" />
-        </div>
 
-        <div class="search">
-          <input type="" placeholder="Search" />
-          <button>Search</button>
-        </div>
-
-        <div class="contactUs">
-          <div class="phoneCall">
-            <img src="assets/icons/PhoneCall 1.png" alt="" />
+      <div class="heroSection">
+        <div class="hSLeft">
+          <div class="hSLeftContent">
+            <h1>
+              Fresh & Healthy <br />
+              Organic Food
+            </h1>
+            <h5>Sale up to <button>30% OFF</button></h5>
+            <p>Free shipping on all your order.</p>
           </div>
-          <div class="PhoneCallNo">
-            <p>Customer Services</p>
-            <h4>(219) 555-0114</h4>
+        </div>
+        <div class="hSRight">
+          <div class="hSRTop">
+            <h4>Summer Sale</h4>
+            <h2>75% OFF</h2>
+            <p>Only Fruit & Vegetable</p>
+            <button>
+              <b>Shop Now</b>
+              <img class="arrBtn" src="assets/icons/Group.png" alt="" />
+            </button>
+          </div>
+          <div class="hSRBottom">
+            <h5>Best Deal</h5>
+            <h2>
+              Special Products <br />
+              Deal of the Month
+            </h2>
+            <button>
+              <b>Shop Now</b>
+              <img class="arrBtn" src="assets/icons/Group.png" alt="" />
+            </button>
           </div>
         </div>
       </div>
 
-      <div class="navigation">
-        <div class="navbar">
-          <a href="#">Home</a>
-          <a href="#">Shop</a>
-          <a href="#">Pages</a>
-          <a href="#">Blog</a>
-          <a href="#">About Us</a>
-          <a href="#">Contact Us</a>
+      <div class="featuresSec">
+        <div class="featureBox">
+          <div class="featureIcon">
+            <img src="assets/icons/Vector.png" alt="" />
+          </div>
+          <div class="featureText">
+            <h4>Free Shipping</h4>
+            <p>Free shipping on all your order</p>
+          </div>
         </div>
 
-        <div class="icons">
-          <img src="assets/icons/Heart.png" alt="" />
-          <img src="assets/icons/Bag.png" alt="" />
-          <img src="assets/icons/user_3 1.png" alt="" />
+        <div class="featureBox">
+          <div class="featureIcon">
+            <img src="assets/icons/Group (1).png" alt="" />
+          </div>
+          <div class="featureText">
+            <h4>Customer Support 24/7</h4>
+            <p>Instant access to Support</p>
+          </div>
+        </div>
+
+        <div class="featureBox">
+          <div class="featureIcon">
+            <img src="assets/icons/Group (2).png" alt="" />
+          </div>
+          <div class="featureText">
+            <h4>100% Secure Payment</h4>
+            <p>We ensure your money is save</p>
+          </div>
+        </div>
+
+        <div class="featureBox">
+          <div class="featureIcon">
+            <img src="assets/icons/Group (3).png" alt="" />
+          </div>
+          <div class="featureText">
+            <h4>Money-Back Guarantee</h4>
+            <p>30 Days Money-Back Guarantee</p>
+          </div>
         </div>
       </div>
+
+      <div class="popularCategories">
+        <div class="header">
+          <h3>Popular Categories</h3>
+          <div class="btn">
+            <h5>View All</h5>
+            <img src="assets/icons/Group.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <div class="categoryGrid">
+        <div class="categoryItem">
+          <img src="assets/images/image 1.png" alt="">
+          <h5>Fresh Fruit</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (1).png" alt="">
+          <h5>Fresh vegitables</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (2).png" alt="">
+          <h5>Meat & Fish</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (3).png" alt="">
+          <h5>Snacks</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (4).png" alt="">
+          <h5>Beverages</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (5).png" alt="">
+          <h5>Beauty & Health</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (6).png" alt="">
+          <h5>Bread & Bakery</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (7).png" alt="">
+          <h5>Baking Needs</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (8).png" alt="">
+          <h5>Cooking</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (9).png" alt="">
+          <h5>Diabetic Food</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (10).png" alt="">
+          <h5>Dish Detergents</h5>
+        </div>
+
+        <div class="categoryItem">
+          <img src="assets/images/image 1 (11).png" alt="">
+          <h5>Oil</h5>
+        </div>
+      </div>
+
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
