--- a/index.html
+++ b/index.html
@@ -7,56 +7,75 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="mainContainer">
+    <div class="container">
       <div class="topSection">
-        <div class="topBar">
-          <div class="rightTopbar">
-            <div class="map">
-              <img src="assets/icons/Map Pin.png" alt="" />
+        <div class="px20">
+          <div class="topBar">
+            <div class="rightTopbar">
+              <div class="map">
+                <img src="assets/icons/Map Pin.png" alt="" />
+              </div>
+              <div class="address">
+                <p>Store Location: Lincoln- 344, Illinois, Chicago, USA</p>
+              </div>
             </div>
-            <div class="address">
-              <p>Store Location: Lincoln- 344, Illinois, Chicago, USA</p>
+            <div class="leftTopbar">
+              <div class="lang">
+                <select name="" id="">
+                  <option value="">Eng</option>
+                  <option value="">Hindi</option>
+                  <option value="">French</option>
+                </select>
+              </div>
+              <div class="curr">
+                <select name="" id="">
+                  <option value="">USD</option>
+                  <option value="">INR</option>
+                  <option value="">EUR</option>
+                </select>
+              </div>
             </div>
           </div>
-          <div class="leftTopbar">
-            <div class="lang">
-              <select name="" id="">
-                <option value="">Eng</option>
-                <option value="">Hindi</option>
-                <option value="">French</option>
-              </select>
+          <hr />
+          <div class="searchbar">
+            <div class="logo">
+              <img src="assets/logo/Logo.png" alt="" />
             </div>
-            <div class="curr">
-              <select name="" id="">
-                <option value="">USD</option>
-                <option value="">INR</option>
-                <option value="">EUR</option>
-              </select>
+
+            <div class="search">
+              <input type="" placeholder="Search" />
+              <button>Search</button>
+            </div>
+
+            <div class="contactUs">
+              <div class="phoneCall">
+                <img src="assets/icons/PhoneCall 1.png" alt="" />
+              </div>
+              <div class="PhoneCallNo">
+                <p>Customer Services</p>
+                <h4>(219) 555-0114</h4>
+              </div>
+            </div>
+          </div>
+          <div class="searchbarMobile">
+            <div class="logo">
+              <img src="assets/logo/Logo.png" alt="" />
+            </div>
+            <div class="searchbarIcons">
+              <div class="search" onclick="searchfunc()">
+                <img src="assets/icons/Search.png" alt="" />
+              </div>
+              <div class="contactUs" onclick="callFunc()">
+                <div class="phoneCall">
+                  <img src="assets/icons/PhoneCall 1.png" alt="" />
+                </div>
+                <div class="PhoneCallNoMob">
+                  <h4>(219) 555-0114</h4>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <hr />
-        <div class="searchbar">
-          <div class="logo">
-            <img src="assets/logo/Logo.png" alt="" />
-          </div>
-
-          <div class="search">
-            <input type="" placeholder="Search" />
-            <button>Search</button>
-          </div>
-
-          <div class="contactUs">
-            <div class="phoneCall">
-              <img src="assets/icons/PhoneCall 1.png" alt="" />
-            </div>
-            <div class="PhoneCallNo">
-              <p>Customer Services</p>
-              <h4>(219) 555-0114</h4>
-            </div>
-          </div>
-        </div>
-
         <div class="navigation">
           <img src="assets/icons/menu 1.png" alt="" class="hamburger" />
           <div class="navbar">
@@ -76,157 +95,286 @@
         </div>
       </div>
 
-      <div class="heroSection">
-        <div class="hSLeft">
-          <div class="hSLeftContent">
-            <h1>
-              Fresh & Healthy <br />
-              Organic Food
-            </h1>
-            <h5>Sale up to <button>30% OFF</button></h5>
-            <p>Free shipping on all your order.</p>
+      <div class="px20">
+        <div class="heroSection">
+          <div class="hSLeft">
+            <div class="hSLeftContent">
+              <h1>
+                Fresh & Healthy <br />
+                Organic Food
+              </h1>
+              <h5>Sale up to <button>30% OFF</button></h5>
+              <p>Free shipping on all your order.</p>
+            </div>
+          </div>
+          <div class="hSRight">
+            <div class="hSRTop">
+              <h4>Summer Sale</h4>
+              <h2>75% OFF</h2>
+              <p>Only Fruit & Vegetable</p>
+              <button>
+                <b>Shop Now</b>
+                <img class="arrBtn" src="assets/icons/Group.png" alt="" />
+              </button>
+            </div>
+            <div class="hSRBottom">
+              <h5>Best Deal</h5>
+              <h2>
+                Special Products <br />
+                Deal of the Month
+              </h2>
+              <button>
+                <b>Shop Now</b>
+                <img class="arrBtn" src="assets/icons/Group.png" alt="" />
+              </button>
+            </div>
           </div>
         </div>
-        <div class="hSRight">
-          <div class="hSRTop">
-            <h4>Summer Sale</h4>
-            <h2>75% OFF</h2>
-            <p>Only Fruit & Vegetable</p>
-            <button>
-              <b>Shop Now</b>
-              <img class="arrBtn" src="assets/icons/Group.png" alt="" />
-            </button>
+        <div class="featuresSec">
+          <div class="featureBox">
+            <div class="featureIcon">
+              <img src="assets/icons/Vector.png" alt="" />
+            </div>
+            <div class="featureText">
+              <h4>Free Shipping</h4>
+              <p>Free shipping on all your order</p>
+            </div>
           </div>
-          <div class="hSRBottom">
-            <h5>Best Deal</h5>
-            <h2>
-              Special Products <br />
-              Deal of the Month
-            </h2>
-            <button>
-              <b>Shop Now</b>
-              <img class="arrBtn" src="assets/icons/Group.png" alt="" />
-            </button>
+
+          <div class="featureBox">
+            <div class="featureIcon">
+              <img src="assets/icons/Group (1).png" alt="" />
+            </div>
+            <div class="featureText">
+              <h4>Customer Support 24/7</h4>
+              <p>Instant access to Support</p>
+            </div>
           </div>
+
+          <div class="featureBox">
+            <div class="featureIcon">
+              <img src="assets/icons/Group (2).png" alt="" />
+            </div>
+            <div class="featureText">
+              <h4>100% Secure Payment</h4>
+              <p>We ensure your money is save</p>
+            </div>
+          </div>
+
+          <div class="featureBox">
+            <div class="featureIcon">
+              <img src="assets/icons/Group (3).png" alt="" />
+            </div>
+            <div class="featureText">
+              <h4>Money-Back Guarantee</h4>
+              <p>30 Days Money-Back Guarantee</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="popularCategories">
+          <div class="header">
+            <h3>Popular Categories</h3>
+            <div class="viewBtn">
+              <h5>View All</h5>
+              <img src="assets/icons/Group.png" alt="" />
+            </div>
+          </div>
+        </div>
+
+        <div class="popularCategoriesMobile">
+          <div class="header">
+            <h3>Popular Categories</h3>
+            <div class="viewBtnMob">
+              <img src="assets/icons/Group (5).png" class="leftArr" />
+              <img src="assets/icons/Group (4).png" class="rightArr" />
+            </div>
+          </div>
+        </div>
+
+        <div class="categoryGrid">
+          <div class="categoryItem">
+            <div class="item active">
+              <img src="assets/images/image 1.png" />
+              <b>Fresh Fruit</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (1).png" />
+              <b>Fresh Vegetables</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (2).png" />
+              <b>Meat & Fish</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (3).png" />
+              <b>Snacks</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (4).png" />
+              <b>Beverages</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (5).png" />
+              <b>Beauty & Health</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (6).png" />
+              <b>Bread & Bakery</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (7).png" />
+              <b>Baking Needs</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (8).png" />
+              <b>Cooking</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (9).png" />
+              <b>Diabetic Food</b>
+            </div>
+            <div class="item">
+              <img src="assets/images/image 1 (10).png" />
+              <b>Dish Detergents</b>
+            </div>
+
+            <div class="item">
+              <img src="assets/images/image 1 (11).png" />
+              <b>Oil</b>
+            </div>
+          </div>
+        </div>
+
+        <div class="popularproducts">
+          <div class="header">
+            <h3>Popular product</h3>
+            <div class="viewBtn">
+              <h5>View All</h5>
+              <img src="assets/icons/Group.png" alt="" />
+            </div>
+          </div>
+        </div>
+
+        <div class="productSec">
+          <div class="productContant">
+            <div class="product">
+              <img src="assets/images/Image.png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+
+            <div class="product">
+              <img src="assets/images/Image (1).png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+
+            <div class="product">
+              <img src="assets/images/Image (2).png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+
+            <div class="product">
+              <img src="assets/images/Image (3).png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+
+            <div class="product sm-d-none">
+              <img src="assets/images/Image (4).png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+
+            <div class="product sm-d-none">
+              <img src="assets/images/Image (5).png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+
+            <div class="product sm-d-none">
+              <img src="assets/images/Image (6).png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+
+            <div class="product sm-d-none">
+              <img src="assets/images/Image (7).png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+
+            <div class="product md-d-none">
+              <img src="assets/images/Image (8).png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+
+            <div class="product md-d-none">
+              <img src="assets/images/Image (9).png" alt="" />
+              <p>
+                Green Apple
+                <br />
+                <b>$14.99</b>$20.99
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="bannerContainer">
+          <div class="banner banner1"></div>
+
+          <div class="banner banner2"></div>
+
+          <div class="banner banner3"></div>
         </div>
       </div>
-
-      <div class="featuresSec">
-        <div class="featureBox">
-          <div class="featureIcon">
-            <img src="assets/icons/Vector.png" alt="" />
-          </div>
-          <div class="featureText">
-            <h4>Free Shipping</h4>
-            <p>Free shipping on all your order</p>
-          </div>
-        </div>
-
-        <div class="featureBox">
-          <div class="featureIcon">
-            <img src="assets/icons/Group (1).png" alt="" />
-          </div>
-          <div class="featureText">
-            <h4>Customer Support 24/7</h4>
-            <p>Instant access to Support</p>
-          </div>
-        </div>
-
-        <div class="featureBox">
-          <div class="featureIcon">
-            <img src="assets/icons/Group (2).png" alt="" />
-          </div>
-          <div class="featureText">
-            <h4>100% Secure Payment</h4>
-            <p>We ensure your money is save</p>
-          </div>
-        </div>
-
-        <div class="featureBox">
-          <div class="featureIcon">
-            <img src="assets/icons/Group (3).png" alt="" />
-          </div>
-          <div class="featureText">
-            <h4>Money-Back Guarantee</h4>
-            <p>30 Days Money-Back Guarantee</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="popularCategories">
-        <div class="header">
-          <h3>Popular Categories</h3>
-          <div class="btn">
-            <h5>View All</h5>
-            <img src="assets/icons/Group.png" alt="" />
-          </div>
-        </div>
-      </div>
-
-      <div class="categoryGrid">
-        <div class="categoryItem">
-          <img src="assets/images/image 1.png" alt="">
-          <h5>Fresh Fruit</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (1).png" alt="">
-          <h5>Fresh vegitables</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (2).png" alt="">
-          <h5>Meat & Fish</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (3).png" alt="">
-          <h5>Snacks</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (4).png" alt="">
-          <h5>Beverages</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (5).png" alt="">
-          <h5>Beauty & Health</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (6).png" alt="">
-          <h5>Bread & Bakery</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (7).png" alt="">
-          <h5>Baking Needs</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (8).png" alt="">
-          <h5>Cooking</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (9).png" alt="">
-          <h5>Diabetic Food</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (10).png" alt="">
-          <h5>Dish Detergents</h5>
-        </div>
-
-        <div class="categoryItem">
-          <img src="assets/images/image 1 (11).png" alt="">
-          <h5>Oil</h5>
-        </div>
-      </div>
-
     </div>
 
+    <div class="background"></div>
+    <div class="bgBox">
+      <div class="searchShow">
+        <div class="crossIcon">
+          <img
+            src="assets/icons/icons8-cross-50.png"
+            alt=""
+            onclick="closeBtn()"
+          />
+        </div>
+        <div class="searchInput">
+          <input type="" placeholder="Search" />
+        </div>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
