Created testimonial Container, company logo, insta gallery, News letter, and footer

--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
           <img src="assets/images/Instagram Post (5).png" alt="" />
         </div>
 
-        <div class="newSletter">
+        <div class="newsLetter">
           <div class="newSletterLeft">
             <h2>Subcribe our Newsletter</h2>
             <p>
@@ -893,7 +893,7 @@
 
         <!-- Footer -->
 
-        <div class="footer">
+        <div class="footer">testi
           <div class="footerContainer">
             <div class="footerBox">
               <img class="footerlogo" src="assets/logo/Logo (1).png" alt="" />
